Added env file and changed page header

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1469,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,18 +10,23 @@
     "import os\n",
     "from crewai_tools import PDFSearchTool, SerperDevTool\n",
     "from langchain_community.llms import Ollama\n",
-    "from langchain_openai import ChatOpenAI"
+    "from langchain_openai import ChatOpenAI\n",
+    "from dotenv import load_dotenv\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1470,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"SERPER_API_KEY\"] = \"41bdc002cd3d3611f2a25cabf3d986d9c01eb1aa\"\n",
     "\n",
+    "load_dotenv()\n",
     "\n",
+    "serper_api_key = os.getenv(\"SERPER_API_KEY\")\n",
+    "\n",
+    "# Set it in os.environ (if you still want to use it this way)\n",
+    "os.environ[\"SERPER_API_KEY\"] = serper_api_key\n",
     "\n",
     "webSearch = SerperDevTool()\n",
     "llm = LLM(model=\"gpt-4o\")\n",
